syntax = "proto3";

package dtc.task.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dtc/task/v1/claim_record.proto";
import "dtc/task/v1/params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "dtc/x/task/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dtc/task/v1/params";
  }

  // ListClaimRecord Queries a list of ClaimRecord items.
  rpc GetClaimRecord(QueryGetClaimRecordRequest) returns (QueryGetClaimRecordResponse) {
    option (google.api.http).get = "/dtc/task/v1/claim_record/{claim_hash}";
  }

  // ListClaimRecord defines the ListClaimRecord RPC.
  rpc ListClaimRecord(QueryAllClaimRecordRequest) returns (QueryAllClaimRecordResponse) {
    option (google.api.http).get = "/dtc/task/v1/claim_record";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetClaimRecordRequest defines the QueryGetClaimRecordRequest message.
message QueryGetClaimRecordRequest {
  string claim_hash = 1;
}

// QueryGetClaimRecordResponse defines the QueryGetClaimRecordResponse message.
message QueryGetClaimRecordResponse {
  ClaimRecord claim_record = 1 [(gogoproto.nullable) = false];
}

// QueryAllClaimRecordRequest defines the QueryAllClaimRecordRequest message.
message QueryAllClaimRecordRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllClaimRecordResponse defines the QueryAllClaimRecordResponse message.
message QueryAllClaimRecordResponse {
  repeated ClaimRecord claim_record = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
